cluster/apps/storage/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    hajimari.io/icon: game-icons:bull-horns
    hajimari.io/enable: true
    hajimari.io/appName: "Longhorn"
    hajimari.io/group: "Monitoring"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: "longhorn.${SECRET_LOCAL_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts: 
    - longhorn.${SECRET_LOCAL_DOMAIN}
    secretName: wildcard-certs-longhorn-system
